<resources>
    <string name="app_name">Pomodoro Cards</string>
    <string name="connect_with_trello">Connect with Trello</string>
    <string name="config_account">Config account</string>
    <string name="login_success">Login success!</string>
    <string name="login_error">Login error!</string>
    <string name="welcome">Welcome a board!</string>
    <string name="info_config">Please set which list will be the sources of your tasks.</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="board">Board</string>
    <string name="select_board">Select board</string>
    <string name="to_do_list">Todo list</string>
    <string name="select_to_do_list">Select list for todo tasks</string>
    <string name="doing_list">Doing list</string>
    <string name="select_doing_list">Select list for doing tasks</string>
    <string name="done_list">Done list</string>
    <string name="select_done_list">Select list for done tasks</string>
    <string name="save">Save</string>
    <string name="validation_empty_field">Field mandatory</string>
    <string name="validation_repeated_list">List already selected</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="error_connection">Error connection. Please try again later.</string>
    <string name="empty_list">There are not cards in __</string>
    <string name="start">Start</string>
    <string name="watch">Watch</string>
    <string name="time_over">Over!</string>
    <string name="notification">__ time over.</string>
    <string name="notification_inside_activity">__ time over. Do you want to check it?</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="long_break">Long break</string>
    <string name="short_break">Short break</string>
    <string name="move_to_done_list">Move to done list</string>
    <string name="back_to_todo_list">Back to todo list</string>
    <string name="spend_another_action">Spend another action</string>
    <string name="select_action_to_spend">Select action to spend</string>
    <string name="action_selected">Action selected</string>
    <string name="spend_it">Spend it!</string>
    <string name="task_moved_to_done_list">__ moved to done list</string>
    <string name="task_moved_to_doing_list">__ moved to doing list!</string>
    <string name="task_moved_to_todo_list">__ moved to todo list</string>
    <string name="performance">Performance</string>
    <string name="spent_time">Spent time: </string>
    <string name="pomodoros">Pomodoros: </string>
    <string name="long_breaks">Long breaks: </string>
    <string name="short_breaks">Short breaks: </string>
    <string name="what_next">What\'s next?</string>
    <string name="its_over">It\'s over</string>
    <string name="spent_time_added">__ added to already spent time</string>
    <string name="add_todo_card">Add new card to todo list</string>
    <string name="name_card">Name card</string>
    <string name="task_added_to_todo_list">__ added to todo list!</string>
    <string name="logout">Logout</string>
    <string name="ask_to_logout">Are you sure you want to log out?</string>
    <string name="rate_this_app_title">Rate this app</string>
    <string name="rate_this_app_content">If you enjoy using this app, would you mind taking a moment to rate it?\nThanks for your support!</string>
    <string name="rate_now">Rate now</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, thanks</string>
</resources>

